# python_template

./: CHANGELOG.md  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: main.yml  parasite.yml  release-please.yml
MyLibrary/: __init__.py
conda/: meta.yaml
