[metadata]
name = python_template
version = 0.1.0
description = A test python package
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = one, two
license = MIT
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
